# vulkan-cpp-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
assets/shaders/: triangle.vert.glsl
build_scripts/linux/: _variables.sh  build.sh  cleanbuild.sh  create_project.sh  run_project.sh  set_aliases.sh  unset_aliases.sh
build_scripts/windows/: _variables.ps1  build_cmake.ps1  build_msvc.ps1  build_shaders.ps1  cleanbuild.ps1  git_pull.ps1  git_push.ps1  goto.ps1  rebuild.ps1  run_project.ps1  set_aliases.ps1
cmake_macros/: getLibLoc.cmake  prac.cmake
common/: CMakeLists.txt  project_paths.h.in
common/test_class/: test.cpp  test.h
src/: 01_test_project.cpp  CMakeLists.txt
